[gd_scene load_steps=4 format=3 uid="uid://b2425f11jvhke"]

[ext_resource type="Script" uid="uid://drp2ri1juq6wr" path="res://GUI/PauseMenu/Quests/quest_item.gd" id="1_q2574"]
[ext_resource type="FontFile" uid="uid://b5quxqbhgleq5" path="res://GUI/Fonts/Abaddon Bold.ttf" id="1_r7hy5"]
[ext_resource type="FontFile" uid="uid://dvh8nycvyh4np" path="res://GUI/Fonts/m5x7.ttf" id="2_q2574"]

[node name="QuestItem" type="Button"]
custom_minimum_size = Vector2(200, 45)
script = ExtResource("1_q2574")

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 5.0
offset_top = 8.0
offset_right = 197.0
offset_bottom = 26.0
theme_override_fonts/font = ExtResource("1_r7hy5")
text = "Quest Title"
clip_text = true
text_overrun_behavior = 3

[node name="StepLabel" type="Label" parent="."]
modulate = Color(0.5984356, 0.5984356, 0.5984356, 1)
layout_mode = 0
offset_left = 7.0
offset_top = 23.0
offset_right = 193.0
offset_bottom = 41.0
theme_override_fonts/font = ExtResource("2_q2574")
text = "Quest step 1/5"
clip_text = true
text_overrun_behavior = 3
